--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,7 +155,7 @@ footer a {
   width: 100vw;
   height: 100vh;
   background-color: rgba(192, 192, 192, 0.5);
-  background-image: url("http://i.stack.imgur.com/MnyxU.gif");
+  background-image: url("https://i.pinimg.com/originals/e5/53/46/e55346d539daeda80680794de7f29a93.gif");
   background-repeat: no-repeat;
   background-position: center;
 }
