--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,8 +152,8 @@ footer a {
   top: 0;
   left: 0;
   z-index: 100;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(192, 192, 192, 0.5);
   background-image: url("https://i.pinimg.com/originals/e5/53/46/e55346d539daeda80680794de7f29a93.gif");
   background-repeat: no-repeat;
